 o viewGraph: new module viewGraph_utils
 o configure: fixed bug under Cygwin (patch by Julien Bernet)
 o configure: look for lablgnomecanvas.cmxa when compiling in native code
 o Makefile: fixed make install-findlib when lablgtk and/or
   lablgnomecanvas not installed (patch by Peter Hawkins)

version 1.0, October 14th, 2008
------------------------------
 o license: LGPL updated to version 2.1
 o ocamlgraph now requires ocaml 3.10 or higher
 o experimental: GTK-based graph viewer based on dot 
   (contribution of Anne Pacalet)
 o Makefile: 
     - fixed bug when lablgnomecanvas is not installed
     - fixed bug when ocamlfind is installed
     - patch to the build system for a DESTDIR (patch by Igor Galic)
     - "make -j" compliant
 o new function Blocks.after_unserialization in order to be able to safely
   serialize abstract vertices (see the FAQ)
 o Dot: 
     - fixed bug in the parsing of attributes
     - fixed bug in the parsing of subgraphs (patch by Anne Pacalet)
 o Oper: fixed bug in intersect
 o Path: improved efficiency of Dijkstra
 o Topological: 
     - fixed bug in Make.{iter,fold}
     - folding is now tail-recursive (patch by Michael Furr)

version 0.99c, April 3rd, 2008
------------------------------
 o replicated a bug fix of Bitv (could not affect Matrix, though)
 o fixed DFS traversal in Traverse.Dfs.{prefix,prefix_component,iterator}

version 0.99b, December 18th, 2007
----------------------------------
 o fixed link bug with ocaml 3.09 
   (see http://caml.inria.fr/mantis/view.php?id=4124)

version 0.99a, November 21st, 2007
---------------------------------
 o fixed bug in Makefile when lablgtk2 is not installed
 o Sig.I.create and Sig_pack.create are now of type ?size:int -> unit -> t 
   (instead of unit -> t) to indicate an initial guess on the graph size

version 0.99, June 27th, 2007
-----------------------------
 o experimental: GTK-based graph editor based on hyperbolic geometry;